Fix sumaho overflow

--- a/css/style.css
+++ b/css/style.css
@@ -200,6 +200,10 @@ h1 {
 
 @media (max-width: 479px) {
 
+    body {
+        overflow: auto;
+    }
+
     #kanae {
         object-fit: cover;
         z-index: 1001;
